--- a/mobile/styles.css
+++ b/mobile/styles.css
@@ -18,18 +18,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 /* Button Styles */
+
+/* Styles for mobile menu items */
 .mobile-menu {
   display: none;
-  background-color: var(--dark-color);
-  width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1;
-}
-
-.mobile-menu.active {
-  display: block;
 }
 
 .mobile-menu ul {
@@ -37,8 +29,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0;
-  margin: 0;
 }
 
 .mobile-menu li {
@@ -47,33 +37,53 @@
 
 .mobile-menu li a {
   text-decoration: none;
-  color: var(--light-color);
+  color: #fff;
   padding: 5px 10px;
-  display: block;
 }
 
 .mobile-menu .dropdown-content {
   display: none;
   position: static;
   background-color: #5c5c5c24;
-  min-width: 100%;
+  min-width: 200px;
   overflow-y: auto;
-  border-top: 1px solid var(--shadow-color);
 }
 
-.mobile-menu .dropdown.clicked .dropdown-content {
+
+.menu-icon {
+  width: 100px;
+  padding: 15px 0;
+  text-align: center;
+  margin: 20px 10px;
+  font-weight: bold;
+  background: transparent;
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+  position: fixed;
+  overflow: hidden;
+}
+
+
+.mobile-menu .dropdown.show .dropdown-content {
   display: block;
 }
 
-/* Media Query for Mobile */
-@media screen and (max-width: 768px) {
-  .menu-icon {
-    display: block;
-  }
-  
-  .mobile-menu {
-    display: none; /* Hide by default, will be shown with JavaScript */
-  }
+.mobile-menu.active {
+  display: flex;
+  flex-direction: column;
+}
+
+/* Show the mobile menu and dropdown by default */
+#menu.hidden,
+.mobile-menu.hidden,
+.dropdown-content.hidden {
+  display: block;
+}
+
+/* Hide the mobile menu and dropdown by default */
+.mobile-menu,
+.dropdown-content {
+  display: none;
 }
 
 
@@ -655,8 +665,7 @@ background-color: #007a63;
 
 .service .container-keydupe {
 display: flex;
-flex-direction: row; /* Align children horizontally */
-align-items: flex-start; /* Align items at the top of the container */
+flex-direction: row; /* Align children horizontally *//* Align items at the top of the container */
 justify-content: space-between; /* Create space between items */
 }
 
@@ -714,4 +723,66 @@ flex: 70%;
 
 @media screen and (max-width: 1200px) {
 /* Add styles for extra large devices here */
+}
+
+/* Existing CSS content truncated for brevity... */
+
+/* Styles for mobile menu items */
+
+.mobile-menu {
+  display: none;
+  background-color: var(--dark-color);
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
+
+.mobile-menu.active {
+  display: block;
+}
+
+.mobile-menu ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+}
+
+.mobile-menu li {
+  margin: 10px 0;
+}
+
+.mobile-menu li a {
+  text-decoration: none;
+  color: var(--light-color);
+  padding: 5px 10px;
+  display: block;
+}
+
+.mobile-menu .dropdown-content {
+  display: none;
+  position: static;
+  background-color: #5c5c5c24;
+  min-width: 100%;
+  overflow-y: auto;
+  border-top: 1px solid var(--shadow-color);
+}
+
+.mobile-menu .dropdown.clicked .dropdown-content {
+  display: block;
+}
+
+/* Media Query for Mobile */
+@media screen and (max-width: 768px) {
+  .menu-icon {
+    display: block;
+  }
+  
+  .mobile-menu {
+    display: none; /* Hide by default, will be shown with JavaScript */
+  }
 }
