--- a/mobile/styles.css
+++ b/mobile/styles.css
@@ -122,19 +122,20 @@ color: var(--light-color);
 }
 
 .content h1 {
-font-size: 70px;
-margin-top: -25px;
+font-size: 5vh;
 }
 
 .content p {
 margin: 5px auto;
 font-weight: 100;
 line-height: 25px;
+font-size: small;
 }
 
 
 button {
-width: 200px;
+width: 20%;
+max-width: 20%;
 padding: 15px 0;
 text-align: center;
 margin: 20px 10px;
@@ -201,7 +202,8 @@ padding-bottom: 10%;
 
 .banner-contact {
 width: 100%;
-height: 100%;
+height: 100vh;
+max-height: 220vh;
 background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/desktop/Images/background.jpeg);
 background-size: cover;
 background-position: center;
@@ -243,9 +245,10 @@ position: relative;
 }
 
 .logo {
-position: relative;
 width: 120px;
 cursor: pointer;
+position: relative;
+align-items: center;
 }
 
 .navbar ul {
@@ -472,21 +475,20 @@ height: auto;
 width: auto;
 margin: 10px auto;
 margin-bottom: 10px;
-background-color: #52525242;
 box-shadow: 0px 2px 10px var(--shadow-color);
 border-radius: 10px;
 padding: 10%;
 }
 
 .title {
-font-size: 28px;
+font-size: 5vh;
 font-weight: bold;
 color: var(--primary-color);
 margin-bottom: 15px;
 }
 
 .description {
-font-size: 1rem;
+font-size: 2vh;
 line-height: 1.6;
 color: var(--light-color);
 margin-bottom: 20px;
@@ -532,8 +534,10 @@ background-color: #3333335e;
 }
 
 .sliding-container img {
-width: 550px;
-height: 400px;
+width: auto;
+height: auto;
+max-width: 450px;
+max-height: 450px;
 position: absolute;
 top: 50px;
 left: 50%;
@@ -608,7 +612,7 @@ box-shadow: 0 2px 6px var(--shadow-color);
 }
 
 .home-container h1 {
-font-size: 54px;
+font-size: 5vh;
 font-weight: bold;
 color: var(--light-color);
 margin-bottom: 0px;
@@ -620,14 +624,14 @@ color: #bd2300;
 }
 
 .home-container h2 {
-font-size: 42px;
+font-size: 3vh;
 color: var(--light-color);
 margin-bottom: 10px;
 padding-top: 1.875rem;
 }
 
 .home-container p {
-font-size: 0.875rem;
+font-size: 2vh;
 color: var(--light-color);
 line-height: 1.5;
 margin-bottom: 15px;
