--- a/mobile/styles.css
+++ b/mobile/styles.css
@@ -14,6 +14,7 @@
   --light-color: #fff;
   --shadow-color: rgba(0, 0, 0, 0.1);
   --transparent-color: rgba(0, 0, 0, 0);
+  --dark-red-color: #bd2300;
 }
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
@@ -110,6 +111,7 @@ font-style: italic;
 margin-top: 5px ;
 margin-bottom: 5px;
 font-family: 'Roboto', sans-serif;
+color: var(--light-color);
 }
 .content {
 width: 100%;
@@ -122,7 +124,8 @@ color: var(--light-color);
 }
 
 .content h1 {
-font-size: 5vh;
+font-size: 6vh;
+color: var(--light-color);
 }
 
 .content p {
@@ -134,8 +137,8 @@ font-size: small;
 
 
 button {
-width: 20%;
-max-width: 20%;
+width: 30%;
+max-width: 30%;
 padding: 15px 0;
 text-align: center;
 margin: 20px 10px;
@@ -191,13 +194,13 @@ position: relative;
 }
 
 .banner-services {
-width: 100%;
-height: 100%;
+width: min(100%, 100%);
+height: min(100%, 100%);
 background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/desktop/Images/background.jpeg);
 background-size: cover;
 background-position: center;
 position: relative;
-padding-bottom: 10%;
+padding-bottom: 30%;
 }
 
 .banner-contact {
@@ -320,7 +323,7 @@ text-align: left;
 }
 
 .dropdown-content li a:hover {
-background-color: var(--light-color);
+background-color: var(--transparent-color);
 }
 
 /* Responsive Styles */
@@ -789,4 +792,34 @@ flex: 70%;
   .mobile-menu {
     display: none; /* Hide by default, will be shown with JavaScript */
   }
+}
+
+
+/* Services Styles */
+
+.container-services{
+  width: min(80%, 80%);
+  height: min(80%, 80%);
+  margin-top: 15%;
+  border: 3px solid hotpink;
+  margin-inline: auto;
+  padding: min(2vh, 10%);
+}
+
+.h1-services {
+  color: var(--dark-red-color);
+  padding: 0.5rem;
+  border-bottom: var(--primary-color) solid 2px;
+}
+
+.h2-services {
+  color: var(--primary-color);
+  padding: 0.5rem;
+  font-size: medium;
+}
+
+.p-services {
+  color: var(--secondary-color);
+  padding: 0.2rem;
+  font-size: small;
 }
