--- a/desktop/styles.css
+++ b/desktop/styles.css
@@ -14,6 +14,7 @@
     --light-color: #fff;
     --shadow-color: rgba(0, 0, 0, 0.1);
     --transparent-color: rgba(0, 0, 0, 0);
+    --dark-red-color: #bd2300;
 }
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
@@ -121,18 +122,18 @@ button:hover .index-span {
 }
 
 .banner-services {
-  width: 100%;
-  height: 100%;
+  width: min(100%, 100%);
+  height: min(100%, 100%);
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/desktop/Images/background.jpeg);
   background-size: cover;
   background-position: center;
   position: relative;
   padding-bottom: 10%;
-}
+  }
 
 .banner-contact {
-  width: 100%;
-  height: 100%;
+  width: max(100%, 50%);
+  height: max(100vh, 25vh);
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/desktop/Images/background.jpeg);
   background-size: cover;
   background-position: center;
@@ -143,11 +144,12 @@ button:hover .index-span {
 
 .banner-about {
   width: 100%;
-  height: 100%;
+  height: max(100%, 100%);
   background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/desktop/Images/background.jpeg);
   background-size: cover;
   background-position: center;
   position: relative;
+  padding-bottom: min(50%, 30%);
 }
 
 
@@ -398,15 +400,12 @@ button:hover .index-span {
 /* About us Styles */
 
 .container {
-  padding: 50px;
-  height: auto;
-  width: auto;
-  margin: 10px auto;
-  margin-bottom: 10px;
-  background-color: #52525242;
+  padding: 10%;
+  height: 20%;
+  width: 80%;
+  margin-inline: auto;
   box-shadow: 0px 2px 10px var(--shadow-color);
   border-radius: 10px;
-  padding: 10%;
 }
 
 .title {
@@ -656,3 +655,64 @@ a:hover {
 @media screen and (max-width: 1200px) {
   /* Add styles for extra large devices here */
 }
+
+
+/* Services Styles */
+
+.container-services{
+  width: min(80%, 80%);
+  height: min(80%, 80%);
+  margin-inline: auto;
+  padding: min(50%, 10px);
+  margin-top: 5%;
+}
+
+.h1-services {
+  font-size: min(5vh, 10vh);
+  color: var(--dark-red-color);
+  padding-bottom: 20px;
+  padding-top: 50px;
+  border-bottom: solid 2px var(--primary-color);
+  font: bold;
+}
+
+.h2-services {
+  font-size: min(2.5vh, 5vh);
+  color: var(--primary-color);
+  padding: 0.5rem;
+  font-style: italic;
+}
+
+.p-services {
+  font-size: min(2vh, 3vh);
+  color: var(--secondary-color);
+  padding: 0.2rem;
+  padding-bottom: 15px;
+  width: min(100%, 1000px);
+}
+
+.p-services + .p-services {
+  margin-top: 20px
+}
+
+.h1-services:hover {
+  transform: scale(1.02);
+  transition: transform 0.2 ease-in-out;
+}
+
+.container-services a.learnmore-button {
+  display: inline-block;
+  background-color: var(--primary-color);
+  color: var(--dark-color);
+  text-decoration: none;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 5px 10px;
+  border-radius: 5px;
+  border: var(--dark-color) solid 1px;
+  transition: background-color 0.3s ease-in-out;
+  }
+
+  .container-services a.learnmore-button:hover {
+    background-color: var(--dark-red-color);
+  }
