--- a/styles.css
+++ b/styles.css
@@ -220,7 +220,7 @@ padding-bottom: 30%;
 
 .banner-contact {
 width: 100%;
-height: auto;
+height: 100vh;
 background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/Images/background.jpeg);
 background-size: cover;
 background-position: center;
@@ -230,7 +230,7 @@ position: relative;
 
 .banner-about {
 width: 100%;
-height: auto;
+height: calc(min(135vh, 1000px) - 1%);
 background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/Images/background.jpeg);
 background-size: cover;
 background-position: center;
@@ -412,7 +412,7 @@ width: 100%;
   }
   
   .brand-name {
-  color: #bd2300;
+  color:var(--dark-red-color);
   }
   
   .home-container h2 {
@@ -574,12 +574,12 @@ width: 100%;
 
   /*  Contact Styles  */
 
+
 .container-contact {
   margin-inline: auto;
   box-shadow: 0px 2px 10px var(--shadow-color);
   border-radius: 10px;
   padding: 10%;
-  border: 2px solid red;
   }
   
   .contact {
@@ -798,7 +798,7 @@ width: 100%;
     }
 
     .mobile-menu {
-        display: none; /* Hide the full navbar */
+        display: flex; /* Hide the full navbar */
 
     }
 
@@ -820,9 +820,13 @@ width: 100%;
     .mobile-menu {
         display: flex; /* Show the full navbar */
     }
+
+    .banner-about {
+      height: 120vh;
+    }
 }
 
-@media (min-width:768px) {
+@media ((min-width:768px) and (max-height: 1400px)) {
 
   .mobile-menu li {
     font-size: calc(8px + 0.5vw);
@@ -830,6 +834,34 @@ width: 100%;
 
   .logo {
     width: calc(120px + 1vw);
+  }
+
+  .banner-index {
+    padding-bottom: 45%;
+  }
+
+  .content {
+    width: calc(80% + 10%);
+  }
+
+  .content h1 {
+    font-size: calc(9vh + 1vw);
+  }
+
+  .button-index {
+    width: 20%;
+  }
+
+  .content p {
+    font-size: calc(12px + 0.3vw);
+  }
+
+  .banner-about{
+    height: calc(90vh + 10vh);
+  }
+
+  .banner-index {
+    height: calc(60vh + 10vh);
   }
 
 }
