--- a/styles.css
+++ b/styles.css
@@ -210,7 +210,7 @@ padding-bottom: 10%;
 
 .banner-services {
 width: 100%;
-height: 100vh;
+height: 100%;
 background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/Images/background.jpeg);
 background-size: cover;
 background-position: center;
@@ -518,7 +518,7 @@ width: 100%;
 
 .container-services{
   width: 80%;
-  height: auto;
+  height: 100%;
   margin-top: 15%;
   margin-inline: auto;
   padding: min(2vh, 10%);
