--- a/styles.css
+++ b/styles.css
@@ -693,6 +693,53 @@ width: 100%;
   
   /* All Services Styles */
 
+  .gallery {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 10px;
+    max-width: 80%;
+    margin-inline: auto;
+    border: var(--light-color) 2px solid;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 5%;
+  }
+  
+  .gallery-img {
+    max-width: 60px;
+    cursor: pointer;
+  }
+  
+  .popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+  
+  .popup-img {
+    max-width: calc(60vw + 10vw);
+    max-height: 80%;
+    display: block;
+    margin-inline: auto;
+    margin-top: 25vh;
+  }
+  
+  .close {
+    position: absolute;
+    top: 20%;
+    right: 30px;
+    font-size: 30px;
+    font-weight: bold;
+    color: var(--primary-color);
+    cursor: pointer;
+  }
+
   .banner {
     height: 100%;
   }
@@ -784,20 +831,6 @@ width: 100%;
     padding: 0.5rem;
   }
 
-  .image-contents,
-  .commercial-image-contents,
-  .glassdoor-image-contents,
-  .keydupe-image-contents,
-  .locksmith-image-contents,
-  .vaultsvs-image-contents{
-    margin-inline: auto;
-    padding: 10%;
-  }
-
-  .img-contents {
-    width: calc(10rem + 2vw);
-    flex-direction: column;
-  }
 
   
   
@@ -907,5 +940,27 @@ width: 100%;
   }
 
 
+  .gallery-img {
+    max-width: 100px;
+  }
 
+  .popup-img {
+    width: calc(30vw + 200px);
+    height: auto;
+    max-height: 70%;
+    max-width: 80%;
+    display: block;
+    margin-inline: auto;
+    margin-top: 25vh;
+  }
+
+  .close {
+    position: absolute;
+    top: 20%;
+    right: 30px;
+    font-size: 30px;
+    font-weight: bold;
+    color: var(--primary-color);
+    cursor: pointer;
+  }
 }
