--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,38 @@
 
+/* Key Frames */
+
+.tracking-in-expand {
+	-webkit-animation: tracking-in-expand 2s cubic-bezier(0.075, 0.820, 0.165, 1.000) 1s alternate both;
+	        animation: tracking-in-expand 2s cubic-bezier(0.075, 0.820, 0.165, 1.000) 1s alternate both;
+}
+
+ @-webkit-keyframes tracking-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes tracking-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+
+
 
 
 .banner-common {
